--- a/framework/sass/_base.scss
+++ b/framework/sass/_base.scss
@@ -4,7 +4,7 @@
 
 // Colours
 //---------------
-$llc-pink:              #b109aa;
+$llc-pink:              #8b31e0;
 $black:                 #000;
 $gray-dark:             #222;
 $gray:                  #444;
@@ -48,5 +48,5 @@ $line-height:           1.4;
     content: "";
     display: table;
     clear: both;
-  }  
+  }
 }
